--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -11,3 +11,7 @@ jobs:
     steps:
       - name: Say hello
         run: echo "Hello World!!!"
+      - name: It is
+        run: date
+      - name: Content
+        run: ls
